istio/voting-destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: voting-vote
spec:
  host: voting-vote
  subsets:
  - name: latest
    labels:
      version: latest
