istio/voting-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: voting-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: voting
spec:
  hosts:
  - "*"
  gateways:
  - voting-gateway
  http:
  - match:
    - uri:
        prefix: /vote
    route:
    - destination:
        host: voting-vote
        port:
          number: 8000
